--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.mongodb:mongodb-driver:3.4.1'
     compile group: 'org.glassfish', name: 'javax.json', version: '1.1.4'
 }
 
