--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     compile 'org.mongodb:mongodb-driver:3.4.1'
     compile group: 'org.glassfish', name: 'javax.json', version: '1.1.4'
 }
